Initial attempt at compiler feedback