@@ -5,7 +5,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
-import java.util.concurrent.TimeUnit;
 
 import coms309.api.dataobjects.ApiCodeSubmission;
 import coms309.database.dataobjects.AssignmentFile;
@@ -42,25 +41,42 @@ public class CRunner extends CodeRunner {
     @Override
     public boolean compile() throws IOException {
 
-        Process process;
+        // Process process;
+
+        ProcessBuilder processBuilder;
         
         if(codeFolder.equals("")) {
             // no compile script, just compile a single file
             String executableName = mainName.substring(0, mainName.indexOf('.'));
             File outDir = new File(testFolder + "/out/");
             outDir.mkdirs();
-            process = Runtime.getRuntime().exec("gcc " + testFolder + "/" + mainName + " -o " + testFolder + "/out/" + executableName);
+            // process = Runtime.getRuntime().exec("gcc " + testFolder + "/" + mainName + " -o " + testFolder + "/out/" + executableName);
+            processBuilder = new ProcessBuilder("gcc", testFolder + "/" + mainName, "-o", testFolder + "/out/" + executableName);
         } else {
-            process = Runtime.getRuntime().exec(testFolder + "/compile.sh " + mainName);
+            // process = Runtime.getRuntime().exec(testFolder + "/compile.sh " + mainName);
+            processBuilder = new ProcessBuilder(testFolder + "/compile.sh" + mainName);
         }
+
+        ProcessManager processManager = new ProcessManager(processBuilder);
+
+        if(processManager.runForTime(5000)) {
+            stdOutData = processManager.getOutputData();
+            stdErrData = processManager.getErrorData();
+            return processManager.getExitValue() == 0;
+        }
+    
+        processManager.terminateProcess();
+
+        stdOutData = processManager.getOutputData();
+        stdErrData = processManager.getErrorData();
         
-        try {
-            if(process.waitFor(5, TimeUnit.SECONDS)) {
-                return process.exitValue() == 0;
-            }
-        } catch (InterruptedException e) {
-            e.printStackTrace();
-        }
+        // try {
+        //     if(process.waitFor(5, TimeUnit.SECONDS)) {
+        //         return process.exitValue() == 0;
+        //     }
+        // } catch (InterruptedException e) {
+        //     e.printStackTrace();
+        // }
 
         return false;
     }
@@ -76,32 +92,38 @@ public class CRunner extends CodeRunner {
     public boolean run() throws IOException {
         String executableName = mainName.substring(0, mainName.indexOf('.'));
 
-        Process process = Runtime.getRuntime().exec(testFolder + "/out/" + executableName);
+        // Process process = Runtime.getRuntime().exec(testFolder + "/out/" + executableName);
+        ProcessManager processManager = new ProcessManager(new ProcessBuilder(testFolder + "/out/" + executableName));
 
-        stdout = process.getInputStream();
-        stderr = process.getErrorStream();
+        // stdout = process.getInputStream();
+        // stderr = process.getErrorStream();
 
-        long startTime = System.currentTimeMillis();
+        // long startTime = System.currentTimeMillis();
 
-        byte[] buff = new byte[1024];
+        // byte[] buff = new byte[1024];
 
         // run while process is alive and we have not hit a timeout
-        while(process.isAlive() && System.currentTimeMillis() - startTime < maxRuntime) {
-            while(stdout.available() > 0) {
-                int n = stdout.read(buff);
-                stdOutData = stdOutData.concat(new String(buff, 0, n));
-            }
+        // while(process.isAlive() && System.currentTimeMillis() - startTime < maxRuntime) {
+        //     while(stdout.available() > 0) {
+        //         int n = stdout.read(buff);
+        //         stdOutData = stdOutData.concat(new String(buff, 0, n));
+        //     }
 
-            while(stderr.available() > 0) {
-                int n = stderr.read(buff);
-                stdErrData = stdErrData.concat(new String(buff, 0, n));
-            }
-        }
+        //     while(stderr.available() > 0) {
+        //         int n = stderr.read(buff);
+        //         stdErrData = stdErrData.concat(new String(buff, 0, n));
+        //     }
+        // }
 
-        if(process.isAlive()){
-            process.destroyForcibly();
-            return false;
-        }
+        // if(process.isAlive()){
+        //     process.destroyForcibly();
+        //     return false;
+        // }
+
+        if(!processManager.runForTime(maxRuntime)) processManager.terminateProcess();
+
+        stdOutData = processManager.getOutputData();
+        stdErrData = processManager.getErrorData();
 
         return true;
 
